--- a/source/sass/main/places.scss
+++ b/source/sass/main/places.scss
@@ -5,6 +5,7 @@
 }
 
 .places__header {
+  position: relative;
   padding: 32px 20px;
   margin: 0 auto;
   width: 100%;
