--- a/source/sass/main/subject.scss
+++ b/source/sass/main/subject.scss
@@ -4,6 +4,8 @@
   display: flex;
   flex-direction: column;
   background-color: #eeeeee;
+  margin: 0;
+  padding: 0 24px 0 24px;
 }
 
 .subject--order {
@@ -13,10 +15,16 @@
 .subject--big {
   background-color: #81b3d2;
   width: 100%;
+  padding: 0;
+}
+
+.subject--big .subject__item {
+  border: none;
 }
 
 .subject__item {
   padding: 24px 16px;
+  border-bottom: 1px solid #d6d6d6;
 }
 
 .subject__title {
@@ -70,7 +78,7 @@
 .subject__image {
   display: block;
   width: 100%;
-  height: 260px;
+  height: 256px;
   object-fit: none;
   background-position: center center;
 }
@@ -79,6 +87,7 @@
   .subject {
     display: flex;
     flex-direction: row;
+    padding: 0;
   }
 
   .subject--big {
@@ -90,6 +99,12 @@
     flex-direction: row-reverse;
   }
 
+  .subject__title {
+    width: 140px;
+    text-align: center;
+    margin: 20px auto;
+  }
+
   .subject__description {
     width: 190px;
   }
@@ -98,6 +113,8 @@
     width: 256px;
     height: 256px;
     box-sizing: border-box;
+    margin: 0;
+    border: none;
   }
 
   .subject__image {
